@@ -1,3 +1,8 @@
+2019-07-01  Mark Wielaard  <mark@klomp.org>
+
+	* run-large-elf-file.sh: Add 2GB to mem_needed when running under
+	valgrind.
+
 2019-06-18  Mark Wielaard  <mark@klomp.org>
 
 	* Makefile.am (TESTS): Add run-large-elf-file.sh.
